--- a/styles/index.css
+++ b/styles/index.css
@@ -38,9 +38,10 @@ body {
 .wrapper {
     width: 65%;
     margin: auto;
+    max-width: 1200px;
 }
 .main-header {
-    color: #fafafa;
+    color: white;
     text-align: center;
     padding-top: 12rem;
     background-color: #2d2d2d;
@@ -53,7 +54,7 @@ body {
     margin-bottom: 0.5rem;
 }
 .main-header .button {
-    color: #fafafa;
+    color: white !important;
     font-size: 2.25rem;
     font-weight: 100;
     font-family: 'Raleway';
